// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the publication metadata builders when using the article builder should return a valid TextOnlyMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/article/3.0.0.json",
  "lens": {
    "content": "GM!",
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "ARTICLE",
    "tags": [
      "question",
      "42",
    ],
    "title": "Great Question",
  },
}
`;

exports[`Given the publication metadata builders when using the profile builder should return a valid ProfileMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/profile/2.0.0.json",
  "lens": {
    "id": Any<String>,
    "name": "John Doe",
  },
}
`;

exports[`Given the publication metadata builders when using the textOnly builder should return a valid TextOnlyMetadata 1`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/text-only/3.0.0.json",
  "lens": {
    "content": "GM!",
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "TEXT_ONLY",
  },
}
`;

exports[`Given the publication metadata builders when using the textOnly builder should return a valid TextOnlyMetadata 2`] = `
{
  "$schema": "https://json-schemas.lens.dev/publications/text-only/3.0.0.json",
  "lens": {
    "content": "GM!",
    "id": Any<String>,
    "locale": "en",
    "mainContentFocus": "TEXT_ONLY",
  },
}
`;
